compiler/weave_syntax/tests/data/syntax/Namespace.error
error: Trailing comma is not allowed in argument list.
        --> <source>:101:36
         |
     101 |                 y: self.y + other.y,
         |                                    ^
